// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Button -  Anchor tag: renders a button inside an anchor tag when prop href is provided 1`] = `
<a
  className="btn btn-default"
  data-button-loader={null}
  href="test"
  role="button"
/>
`;

exports[`Component: Button -  Anchor tag: renders a button inside an anchor tag with attribute data-button-loader when prop href and loader is provided 1`] = `
<a
  className="btn btn-default"
  data-button-loader=""
  href="test"
  role="button"
/>
`;

exports[`Component: Button -  Anchor tag: renders a button inside an anchor tag with class active when prop href and active is provided 1`] = `
<a
  className="btn btn-default active"
  data-button-loader={null}
  href="test"
  role="button"
/>
`;

exports[`Component: Button -  Anchor tag: renders a button inside an anchor tag with class pull-right when prop href and pullRight is provided 1`] = `
<a
  className="btn btn-default pull-right"
  data-button-loader={null}
  href="test"
  role="button"
/>
`;

exports[`Component: Button -  Anchor tag: renders a button inside an anchor tag with id when prop href and id is provided 1`] = `
<a
  className="btn btn-default"
  data-button-loader={null}
  href="test"
  id="test"
  role="button"
/>
`;

exports[`Component: Button -  Anchor tag: renders a button inside an anchor tag with label when prop href and label is provided 1`] = `
<a
  className="btn btn-default"
  data-button-loader={null}
  href="test"
  role="button"
>
  test
</a>
`;

exports[`Component: Button -  Anchor tag: renders a button inside an anchor tag with name when prop href and name is provided 1`] = `
<a
  className="btn btn-default"
  data-button-loader={null}
  href="test"
  name="test"
  role="button"
/>
`;

exports[`Component: Button -  Anchor tag: renders a button with icon and label inside a span inside an anchor tag when prop href, label and icon is provided 1`] = `
<a
  className="btn btn-default"
  data-button-loader={null}
  href="test"
  role="button"
>
  
	
  <i
    className="material-icons"
  >
    test
  </i>
  <span>
    test
  </span>
</a>
`;

exports[`Component: Button -  Anchor tag: renders a button with icon inside an anchor tag when prop href and icon is provided 1`] = `
<a
  className="btn btn-default"
  data-button-loader={null}
  href="test"
  role="button"
>
  
	
  <i
    className="material-icons"
  >
    test
  </i>
</a>
`;

exports[`Component: Button -  Anchor tag: renders a button with specified size inside an anchor tag when prop href and size is provided 1`] = `
<a
  className="btn btn-default btn-size-test"
  data-button-loader={null}
  href="test"
  role="button"
/>
`;

exports[`Component: Button -  Anchor tag: renders a disabled button inside an anchor tag when prop href and disabled is provided 1`] = `
<a
  className="btn btn-default"
  data-button-loader={null}
  disabled={true}
  href="test"
  role="button"
/>
`;

exports[`Component: Button -  Anchor tag: renders a full width button inside an anchor tag when prop href and fullWidth is provided 1`] = `
<a
  className="btn btn-default btn-block"
  data-button-loader={null}
  href="test"
  role="button"
/>
`;

exports[`Component: Button -  Anchor tag: renders a loading button inside an anchor tag when prop href and loading is provided 1`] = `
<a
  className="btn btn-default loading"
  data-button-loader={null}
  href="test"
  role="button"
/>
`;

exports[`Component: Button -  Anchor tag: renders a outline button inside an anchor tag when prop href and outline is provided 1`] = `
<a
  className="btn btn-outline-default"
  data-button-loader={null}
  href="test"
  role="button"
/>
`;

exports[`Component: Button -  Button tag: renders a button with a label when prop label is provided 1`] = `
<button
  className="btn btn-default"
  data-button-loader={null}
  type="button"
>
  test
</button>
`;

exports[`Component: Button -  Button tag: renders a button with an icon when prop icon is provided 1`] = `
<button
  className="btn btn-default"
  data-button-loader={null}
  type="button"
>
  
	
  <i
    className="material-icons"
  >
    test
  </i>
  
	
  

</button>
`;

exports[`Component: Button -  Button tag: renders a button with class active when prop active is provided 1`] = `
<button
  className="btn btn-default active"
  data-button-loader={null}
  type="button"
/>
`;

exports[`Component: Button -  Button tag: renders a button with class pull-right when prop pullRight is provided 1`] = `
<button
  className="btn btn-default pull-right"
  data-button-loader={null}
  type="button"
/>
`;

exports[`Component: Button -  Button tag: renders a button with icon and label inside a span when prop icon and label is provided 1`] = `
<button
  className="btn btn-default"
  data-button-loader={null}
  type="button"
>
  
	
  <i
    className="material-icons"
  >
    test
  </i>
  
	
  <span>
    test
  </span>
  

</button>
`;

exports[`Component: Button -  Button tag: renders a button with specified size when prop size is provided 1`] = `
<button
  className="btn btn-default btn-size-test"
  data-button-loader={null}
  type="button"
/>
`;

exports[`Component: Button -  Button tag: renders a button with the attribute data-button-loader when prop loader is provided 1`] = `
<button
  className="btn btn-default"
  data-button-loader=""
  type="button"
/>
`;

exports[`Component: Button -  Button tag: renders a button with the specified id when prop id is provided 1`] = `
<button
  className="btn btn-default"
  data-button-loader={null}
  id="test"
  type="button"
/>
`;

exports[`Component: Button -  Button tag: renders a button with the specified name when prop name is provided 1`] = `
<button
  className="btn btn-default"
  data-button-loader={null}
  name="test"
  type="button"
/>
`;

exports[`Component: Button -  Button tag: renders a button with the specified type when prop btnType is provided 1`] = `
<button
  className="btn btn-default"
  data-button-loader={null}
  type="test"
/>
`;

exports[`Component: Button -  Button tag: renders a default button and defaults to type='button' when no btnType prop is provided 1`] = `
<button
  className="btn btn-default"
  data-button-loader={null}
  type="button"
/>
`;

exports[`Component: Button -  Button tag: renders a disabled button when prop disabled is provided 1`] = `
<button
  className="btn btn-default"
  data-button-loader={null}
  disabled={true}
  type="button"
/>
`;

exports[`Component: Button -  Button tag: renders a full width button when prop fullWidth is provided 1`] = `
<button
  className="btn btn-default btn-block"
  data-button-loader={null}
  type="button"
/>
`;

exports[`Component: Button -  Button tag: renders a loading button when prop loading is provided 1`] = `
<button
  className="btn btn-default loading"
  data-button-loader={null}
  type="button"
/>
`;

exports[`Component: Button -  Button tag: renders an outline button when prop outline is provided 1`] = `
<button
  className="btn btn-outline-default"
  data-button-loader={null}
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a button inside an input tag and defaults to type='button' when prop input is provided 1`] = `
<input
  className="btn btn-default"
  data-button-loader={null}
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a button inside an input tag with attribute data-button-loader when prop input and loader is provided 1`] = `
<input
  className="btn btn-default"
  data-button-loader=""
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a button inside an input tag with value attribute when prop input and value is provided 1`] = `
<input
  className="btn btn-default"
  data-button-loader={null}
  defaultValue="test"
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a button with class active inside an input tag when prop input and active is provided 1`] = `
<input
  className="btn btn-default active"
  data-button-loader={null}
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a button with class pull-right inside an input tag when prop input and pullRight is provided 1`] = `
<input
  className="btn btn-default pull-right"
  data-button-loader={null}
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a button with specified size inside an input tag when prop input and size is provided 1`] = `
<input
  className="btn btn-default btn-size-test"
  data-button-loader={null}
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a button with the specified id inside an input tag when prop input and id is provided 1`] = `
<input
  className="btn btn-default"
  data-button-loader={null}
  id="test"
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a button with the specified name inside an input tag when prop input and name is provided 1`] = `
<input
  className="btn btn-default"
  data-button-loader={null}
  name="test"
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a button with the specified type inside an input tag when prop input and btnType is provided 1`] = `
<input
  className="btn btn-default"
  data-button-loader={null}
  type="test"
/>
`;

exports[`Component: Button -  Input tag: renders a disabled button inside an input tag when prop input and disabled is provided 1`] = `
<input
  className="btn btn-default"
  data-button-loader={null}
  disabled={true}
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a full width button inside an input tag when prop input and fullWidth is provided 1`] = `
<input
  className="btn btn-default btn-block"
  data-button-loader={null}
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders a loading button inside an input tag when prop input and loading is provided 1`] = `
<input
  className="btn btn-default loading"
  data-button-loader={null}
  type="button"
/>
`;

exports[`Component: Button -  Input tag: renders an outline button inside an input tag when prop input and outline is provided 1`] = `
<input
  className="btn btn-outline-default"
  data-button-loader={null}
  type="button"
/>
`;

exports[`Component: Button -  prop type is marked as required 1`] = `
<button
  className="btn btn-undefined"
  data-button-loader={null}
  type="button"
/>
`;
